include/dsspm_capi.h

    DSS_CAPI_DLL void Settings_Get_UEregs(int32_t** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double Settings_Get_UEweight(void);
    DSS_CAPI_DLL void Settings_Set_LossRegs(int32_t* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Settings_Set_LossWeight(double Value);
    DSS_CAPI_DLL void Settings_Set_Trapezoidal(uint16_t Value);
    DSS_CAPI_DLL void Settings_Set_UEregs(int32_t* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Settings_Set_UEweight(double Value);
    DSS_CAPI_DLL uint16_t Settings_Get_ControlTrace(void);
    DSS_CAPI_DLL void Settings_Get_VoltageBases(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void Settings_Set_ControlTrace(uint16_t Value);
    DSS_CAPI_DLL void Settings_Set_VoltageBases(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL char* Settings_Get_PriceCurve(void);
    DSS_CAPI_DLL double Settings_Get_PriceSignal(void);
    DSS_CAPI_DLL void Settings_Set_PriceCurve(char* Value);
    DSS_CAPI_DLL void Settings_Set_PriceSignal(double Value);